<?xml version="1.0"?>
<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<package format="2">
  <name>sr_system_health</name>
  <version>0.0.1</version>
  <description>The sr_system_health package</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <author email="jesus@shadowrobot.com">Jesus Ferrandiz</author>
  <license>LGPLv3</license>
  <url type="repository">https://github.com/shadow-robot/sr_utils</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr_utils/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python3-rospkg</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>python3-rospkg</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
