<?xml version="1.0"?>
<package format="2">
  <name>sr_system_info</name>
  <version>0.0.0</version>
  <description>The sr_system_info package</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <author email="ethan@shadowrobot.com">Ethan Fowler</author>
  <license>LGPLv3</license>
  <url type="repository">https://github.com/shadow-robot/sr_utils</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr_utils/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-rospkg</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>python-rospkg</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
